--- a/ansible_awx/inventory.ini
+++ b/ansible_awx/inventory.ini
@@ -1,7 +1,7 @@
 localhost
 
 [router]
-mycsr	ansible_host=router_ip
+mycsr	ansible_host=192.168.1.51
 
 [router:vars]
 ansible_connection=network_cli
