--- a/ansible_awx/pre_check_actions.yml
+++ b/ansible_awx/pre_check_actions.yml
@@ -3,6 +3,11 @@
   hosts: all
   connection: network_cli
   gather_facts: no
+  
+  tasks:
+    - name: run the command 'show version'
+      ios_command:
+        commands: show version
 
 
   roles:
