--- a/ansible_awx/roles/pre_check/tasks/main.yml
+++ b/ansible_awx/roles/pre_check/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks file for pre_check
 
-- name: gather facts before ios upgrade
-  ios_facts:
-    gather_subset: all
+#- name: gather facts before ios upgrade
+#  ios_facts:
+#    gather_subset: all
 
 - name: current state of router
   ios_command:
