--- a/ansible_awx/pre_check_actions.yml
+++ b/ansible_awx/pre_check_actions.yml
@@ -2,7 +2,7 @@
 - name: pre upgrade actions
   hosts: all
   connection: network_cli
-  gather_facts: no
+  gather_facts: False
   
   tasks:
     - name: run the command 'show version'
