--- a/ansible_awx/ftp_actions.yml
+++ b/ansible_awx/ftp_actions.yml
@@ -1,8 +1,8 @@
 ---
 - name: ftp actions
-  hosts: "{{ router }}"
+  hosts: all
   connection: network_cli
-  gather_facts: no
+  gather_facts: False
 
   roles:
     - ftp
